Fine tune style

--- a/src/components/_animation.scss
+++ b/src/components/_animation.scss
@@ -65,6 +65,7 @@
 }
 
 .come-in {
+    opacity: 0;
     transform: translateY(150px);
     animation: come-in 1s ease forwards;
 }
@@ -77,7 +78,7 @@
 }
 
 @keyframes come-in {
-    to { transform: translateY(0); }
+    to { opacity: 1; transform: translateY(0); }
 }
 
 @keyframes fadeIn {
